Create form div styling add error handling.

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,10 @@
-<form id='edit-user' action='/users' method='post'>
-  <input type='hidden' name='_method' value='put'>
-  <label for='email'>Email: </label>
-  <input type='text' name=user[email]><br>
-  <label for='password'>Password: </label>
-  <input type='password' name=user[password]><br>
-  <input id='submit-new-user' type='submit' value='Register new user!'>
-</form>
+<div class="form">
+  <form id='edit-user' action='/users' method='post'>
+    <input type='hidden' name='_method' value='put'>
+    <label for='email'>Email: </label>
+    <input type='text' name=user[email]><br>
+    <label for='password'>Password: </label>
+    <input type='password' name=user[password]><br>
+    <input id='submit-new-user' type='submit' value='Register new user!'>
+  </form>
+</div>
