--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,13 @@
-<form id='new-user' action='/users' method='post'>
-  <label for='email'>Email: </label>
-  <input type='text' name=user[email]><br>
-  <label for='password'>Password: </label>
-  <input type='password' name=user[password]><br>
-  <input id='submit-new-user' type='submit' value='Register new user!'>
-</form>
+<div class="form">
+  <form id='new-user' action='/users' method='post'>
+    <h1>Sign Up</h1>
+        <% if @user.errors.any? %>
+          <%= erb :"_errors", locals: {errors: @user.errors.full_messages } %>
+        <% end %>
+    <label for='email'>Email: </label>
+    <input type='text' name=user[email]><br>
+    <label for='password'>Password: </label>
+    <input type='password' name=user[password]><br>
+    <input id='submit-new-user' type='submit' value='Register new user!'>
+  </form>
+</div>
