--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,15 +1,48 @@
-<div id="content">
-    <div class="button" data-key="q" data-sound="https://dl.dropboxusercontent.com/s/h9sow482vkw06xe/dinky-kick.mp3"></div>
-    <div class="button" data-key="w" data-sound="../audio/dinky-snare.mp3"></div>
-    <div class="button" data-key="e" data-sound="../audio/dinky-hat-2.mp3"></div>
-    <div class="button" data-key="r" data-sound="../audio/dinky-cym.mp3"></div>
-    <div class="button" data-key="t" data-sound="../audio/dinky-cym-noise.mp3"></div>
-    <br>
-    <div class="button" data-key="q" data-sound="../audio/dinky-kick.mp3"></div>
-    <div class="button" data-key="w" data-sound="../audio/dinky-snare.mp3"></div>
-    <div class="button" data-key="e" data-sound="../audio/dinky-hat-2.mp3"></div>
-    <div class="button" data-key="r" data-sound="../audio/dinky-cym.mp3"></div>
-    <div class="button" data-key="t" data-sound="../audio/dinky-cym-noise.mp3"></div>
+<div class="keys">
+  <div data-key="65" class="key">
+    <kbd>A</kbd>
+    <span class="sound">Harpsichord</span>
+  </div>
+  <div data-key="83" class="key">
+    <kbd>S</kbd>
+    <span class="sound">Weird Bass</span>
+  </div>
+  <div data-key="68" class="key">
+    <kbd>D</kbd>
+    <span class="sound">kick</span>
+  </div>
+  <div data-key="70" class="key">
+    <kbd>F</kbd>
+    <span class="sound">Bells</span>
+  </div>
+  <div data-key="71" class="key">
+    <kbd>G</kbd>
+    <span class="sound">boom</span>
+  </div>
+  <div data-key="72" class="key">
+    <kbd>H</kbd>
+    <span class="sound">ride</span>
+  </div>
+  <div data-key="74" class="key">
+    <kbd>J</kbd>
+    <span class="sound">snare</span>
+  </div>
+  <div data-key="75" class="key">
+    <kbd>K</kbd>
+    <span class="sound">tom</span>
+  </div>
+  <div data-key="76" class="key">
+    <kbd>L</kbd>
+    <span class="sound">Backwards</span>
+  </div>
 </div>
-<div id="device_info">
-    <div id="key_data"></div>
+
+<audio data-key="65" src="/sounds/100_bizarre-classical-loop.wav"></audio>
+<audio data-key="83" src="/sounds/084_this-bass-swings-weird.wav"></audio>
+<audio data-key="68" src="/sounds/kick.wav"></audio>
+<audio data-key="70" src="/sounds/082_flowing-river-plucked-bell-synth.wav"></audio>
+<audio data-key="71" src="/sounds/boom.wav"></audio>
+<audio data-key="72" src="/sounds/ride.wav"></audio>
+<audio data-key="74" src="/sounds/snare.wav"></audio>
+<audio data-key="75" src="/sounds/tom.wav"></audio>
+<audio data-key="76" src="/sounds/130_backwards-forwards-note.wav"></audio>
