--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,100 +1,137 @@
-*:before, *:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
+html {
+  font-size: 10px;
+  background: url('record2.jpg') bottom center;
+  background-size: cover;
+}
+body,html {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+.banner {
+    display: block;
+    margin: 0 auto;
+}
+.nav-ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.nav-li {
+    font-size: 1.2em;
+    float: left;
+}
+
+.nav-li {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+.nav-li:hover {
+    background-color: #111;
+}
+
+.logout {
+    margin: 0;
+    overflow: hidden;
+    background-color: #333;
+    color: white;
+    border:none;
+    font: inherit;
+    margin: 0;
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    float: left;
+}
+
+.keys {
+  display: flex;
+  flex: 1;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.key {
+  border: .4rem solid black;
+  border-radius: .5rem;
+  margin: 1rem;
+  font-size: 1.5rem;
+  padding: 1rem .5rem;
+  transition: all .07s ease;
+  width: 10rem;
+  text-align: center;
+  color: white;
+  background: rgba(0,0,0,0.4);
+  text-shadow: 0 0 .5rem black;
+}
+
+input[type=text], input[type=password], input[type=textarea], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+.textbox{
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
     box-sizing: border-box;
 }
 
+.form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  padding: 25px 50px 35px 50px;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
 
-h4 {
-    margin: 0 0 5px 0;
-}
-p {
-    margin: 0 0 10px 0;
-}
-#content, #device_info {
-    max-width: 800px;
-    /*height: 125px;*/
-    margin: 0 auto;
-    padding: 10px 0;
-    font-family: sans-serif;
-    font-size: 12px;
-    line-height: 12px;
-    letter-spacing: 1.5px;
-}
-#content, #key_data {
-    margin-top: 0px;
-    text-align: center;
-}
-#inputs, #outputs {
-    display: inline-block;
-    width: 49%;
-    margin-top: 10px;
-    vertical-align: top;
-}
-#outputs {
-    text-align: right;
-}
-.info {
-    padding: 20px;
-    border-radius: 3px;
-    box-shadow: inset 0 0 10px #ccc;
-    background-color: rgba(233, 233, 233, 0.25);
-}
-.small {
-    border-bottom: 1px solid #ccc;
-    margin-left: 10px;
-}
-p:not(.small) {
-    text-transform: uppercase;
-    font-weight: 800;
-}
 .button {
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    margin: 10px;
-    background-color: #00adef;
-    border-radius: 10px;
-    opacity: 1;
+    width: 35%;
+    float: left;
+    background-color: #A47F90;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
-    border: 2px solid white;
-    transition: all 0.2s;
 }
-.button.active {
-    background-color: #9a6aad;
-    opacity: 0.25;
-    box-shadow: inset 0px 0px 30px orange;
-    border: 2px solid rgba(100, 100, 100, 0.3);
-    animation: shake .2s ease-in-out;
+
+.playing {
+  transform: scale(1.1);
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
 }
-@keyframes shake {
-    0% {
-        transform: translateX(0);
-        transform: translateY(0);
-        transform: scale(1, 1);
-    }
-    20% {
-        transform: translateX(-10px);
-        transform: translateY(-100px);
-        transform: scale(0.5, 0.75);
-    }
-    40% {
-        transform: translateX(10px);
-        transform: translateY(0px);
-        transform: scale(1.5, 2);
-    }
-    60% {
-        transform: translateX(-10px);
-        transform: translateY(-50px);
-        transform: scale(0.5, 0.75);
-    }
-    80% {
-        transform: translateX(10px);
-        transform: translateY(50px);
-        transform: scale(1.3, 2);
-    }
-    100% {
-        transform: translateX(0);
-        transform: translateY(0);
-    }
+
+kbd {
+  display: block;
+  font-size: 4rem;
+}
+
+.sound {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: .1rem;
+  color: #ffc600;
 }
